Closed Bug 1228521 Opened 9 years ago Closed 9 years ago

Fix PDU packing in |ServerSendResponseCmd| for GATT Server API

Categories

(Firefox OS Graveyard :: Bluetooth, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(firefox45 fixed)

RESOLVED FIXED
2.6 S2 - 12/4
Tracking Status
firefox45 --- fixed

People

(Reporter: yrliou, Assigned: yrliou)

References

Details

Attachments

(1 file, 1 obsolete file)

      No description provided.
* fix passing handle
* add a convert function from GattAuthReq to uint8_t
Attachment #8692863 - Flags: review?(brsun)
Comment on attachment 8692863 [details] [diff] [review]
Bug 1228521 - Fix PDU packing in |ServerSendResponseCmd| for GATT Server API.

Review of attachment 8692863 [details] [diff] [review]:
-----------------------------------------------------------------

Basically it looks to me. But I would suggest not to handle the data member of |BluetoothAttributeHandle| in the command. |PackPDU| and |Convert| are designed to address such details. r=me if |BluetoothAttributeHandle.mHandle| is handled in |Convert| instead of in the command.
Attachment #8692863 - Flags: review?(brsun) → review+
https://hg.mozilla.org/mozilla-central/rev/73d9848a990e
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → 2.6 S2 - 12/4
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: