Bug 1228521 - Fix PDU packing in |ServerSendResponseCmd| for GATT Server API. r=brsun